# LibraryManagementSystem

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Book.h  DatabaseManager.cpp  DatabaseManager.h  LibraryService.cpp  LibraryService.h  User.h
src/ui/: AddBookDialog.cpp  AddBookDialog.h  DashboardWidget.cpp  DashboardWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h
